--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,8 @@
 
     RewriteEngine On
 
+    SetEnv TZ Asia/Kolkata
+
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
