--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ies1vlQWx0l7zWJFUeQN+nO6kbG9w2HoRJANDqk0eMA=
-APP_DEBUG=true
+APP_DEBUG=TRUE
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
